# FSOcean

./: .gitignore  CMakeLists.txt  README.md  main.c  shell-language-spec  tokenizer.py  unix-shell.peg
headers/: atom_type.h  char_categories.h  impl.h  interactive.h  shellstring.h  states.h  test.h  tokens.h
headers/combinators/: combinator.h  combinator_types.h  stack.h
headers/eval/: shellstring.h  string_eval.h  variables.h
headers/eval/expansion/: filename_exp.h
headers/executable/: exec_case.h  exec_command.h  exec_for_loop.h  exec_if.h  exec_multi_executables.h  exec_redirect.h  exec_until_loop.h  exec_while_loop.h  executable.h  executable_flags.h  executable_type.h  executable_union.h  print_execs.h
headers/lexer/: arithmetic_expansion.c  arithmetic_expansion.h  candidates.h  char_categories.h  command_substitution.h  parameter_expansion.h  primal_token_context.h  states.h  token.h  tokens.h  xbd_operators.h
headers/lexer/shell_grammar/: lexical_conventions.h  rules.h
headers/misc/: impl.h  output.h  safemem.h  stack.h
headers/misc/output/: output.h  print_execs.h
headers/parser/: abstraction.h  ast.h  cst.h  parse_context.h  parser.h  stack.h  token_stack.h
headers/parser/abstractions/: abstract_and_or.h  abstract_complete_command.h  abstract_complete_commands.h  abstract_compound_command.h  abstract_pipeline.h  abstraction.h  imperfect_abstract_io_redirect.h  imperfect_abstract_redirect_list.h
headers/parser/abstractions/compound_command/: abstract_brace_group.h  abstract_case_clause.h  abstract_for_clause.h  abstract_if_clause.h  abstract_subshell.h  abstract_until_clause.h  abstract_while_clause.h  imperfect_abstract_compound_list.h
headers/string_utils/: string_utils.h
headers/testing/: test.h
sources/: atom_type.c  char_categories.c  impl.c  interactive.c  shellstring.c  states.c  test.c  tokens.c
sources/combinators/: combinator.c  stack.c
sources/eval/: shellstring.c  string_eval.c  variables.c
sources/eval/expansion/: filename_exp.c
sources/executable/: exec_case.c  exec_command.c  exec_for_loop.c  exec_if.c  exec_multi_executables.c  exec_redirect.c  exec_unitl_loop.c  exec_while_loop.c  executable.c  print_execs.c
sources/lexer/: arithmetic_expansion.c  char_categories.c  command_substitution.c  parameter_expansion.c  primal_token_context.c  states.c  token.c  tokens.c  xbd_operators.c
sources/lexer/shell_grammar/: lexical_conventions.c  rules.c
sources/misc/: atom_type.c  impl.c  interactive.c  output.c  safemem.c  stack.c
sources/misc/output/: output.c  print_execs.c
sources/parser/: abstraction.c  ast.c  cst.c  parse_context.c  parser.c  stack.c  token_stack.c
sources/parser/abstractions/: abstract_and_or.c  abstract_complete_command.c  abstract_complete_commands.c  abstract_compound_command.c  abstract_pipeline.c  abstraction.c  imperfect_abstract_io_redirect.c  imperfect_abstract_redirect_list.c
sources/parser/abstractions/compound_command/: abstract_brace_group.c  abstract_case_clause.c  abstract_for_clause.c  abstract_if_clause.c  abstract_subshell.c  abstract_until_clause.c  abstract_while_clause.c  imperfect_abstract_compound_list.c
sources/string_utils/: string_utils.c
sources/testing/: test.c
tests/parsing/and_or/: input  output
tests/parsing/redirect/: input  output
tests/parsing/simple/: input  output
tests/tokenization-3-candidates/: input  output
tests/tokenization-simple/: output
tests/tokenization/simple/: input
tests/tokenization/simple-tlc/: output
